Lagt inn navigasjonselementer

--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb">
   <head>
-    <meta name="viewport" content="width=device-width" initial-scale="1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
+    <link href="ikoner/css/fontawesome.css" rel="stylesheet" />
+    <link href="ikoner/css/brands.css" rel="stylesheet" />
+    <link href="ikoner/css/solid.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <title>Eksamen | Kevin 2024</title>
   </head>
   <body>
-    <main>
-      <nav></nav>
-    </main>
+    <div id="grid-container">
+    <header id="global-header">
+      <img id="main-logo" src=""
+      <nav class="flex-space-between">
+        <ul class="flex-menu">
+          <li><a href="#">Hjem</a></li>
+          <li><a href="#">Produkter</a></li>
+          <li><a href="#">Kategorier</a></li>
+          <li><a href="#">Kontakt oss</a></li>
+        </ul>
+        <form>
+          <label for="search" hidden>Søk</label>
+          <input type="search" placeholder="søk her" id="search">
+          <input type="submit" hidden>
+          <button onclick=""><img src="https://img.icons8.com/material-rounded/24/000000/search.png"></button>
+        </form>
+      </nav>
+    </header>
+
+    <footer>
+      <ul id="contact-info">
+        <h5>KONTAKT</h5>
+        <li>Adresse: B R A Veien 4, 1757 Halden</li>
+        <li>Telefon: 69 60 80 00</li>
+        <li>E-post: halden@hiof.no</li>
+        <li>Åpningstider: Stenger 15:00</li>
+      </ul>
+      <ul id="footer-nav">
+        <h5>SNARVEIER</h5>
+        <li><a href="#">Produkter</a></li>
+        <li><a href="#">Kategorier</a></li>
+        <li><a href="#">Kontakt oss</a></li>
+      </ul>
+      <ul>
+        <h5>SOSIALE MEDIER</h5>
+        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+        <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+      </ul>
+    </footer>
+    </div>
   </body>
 </html>
