--- a/index.html
+++ b/index.html
@@ -11,46 +11,192 @@
   </head>
   <body>
     <div id="grid-container">
-    <header id="global-header">
-      <img id="main-logo" src=""
-      <nav class="flex-space-between">
-        <ul class="flex-menu">
-          <li><a href="#">Hjem</a></li>
+      <header id="global-header">
+        <a href="index.html">
+          <img
+            id="main-logo"
+            src="https://picsum.photos/200"
+            alt="Hovedlogo for nettsiden"
+          />
+        </a>
+        <nav class="flex-space-between">
+          <form id="search-bar">
+            <label for="search" hidden>Søk</label>
+            <input type="search" placeholder="søk her" />
+            <button>
+              <span><i class="fa-solid fa-magnifying-glass"></i></span>
+            </button>
+          </form>
+          <ul class="flex-menu">
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="product.html">Produkter</a></li>
+            <li><a href="#">Kategorier</a></li>
+            <li><a href="#contact-info">Kontakt oss</a></li>
+          </ul>
+          <a href="#"
+            ><span><i class="fa-regular fa-user"></i></span
+          ></a>
+          <a href="#"
+            ><span><i class="fa-regular fa-heart"></i></span
+          ></a>
+          <a href="checkout.html"
+            ><span><i class="fa-solid fa-cart-shopping"></i></span
+          ></a>
+        </nav>
+      </header>
+      <main>
+        <section>
+          <div id="banner">
+            <h2>Praesent ut sollicitudin mauris, sit amet rhoncus nisi.</h2>
+            <p>
+              Orci varius natoque penatibus et magnis dis parturient montes,
+              nascetur ridiculus mus.
+            </p>
+            <p>FÅ EN PRØVE PAKKE I DAG</p>
+          </div>
+        </section>
+        <section>
+          <h3>Våre mest populære produkter</h3>
+          <p>Oppdag det av det beste</p>
+          <p>New Product</p>
+          <p>Special Price</p>
+          <p>Best Sellers</p>
+        </section>
+        <section id="products">
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+          <article class="product-card">
+            <img src="https://picsum.photos/id/8/200/300" alt="Produktet" />
+            <p>Product name</p>
+            <p>Kr 1999</p>
+          </article>
+        </section>
+
+        <section id="categories">
+          <h3>Våre mest populære kategorier</h3>
+          <p>OIppdag det beste av det beste</p>
+          <h4>Category 1</h4>
+          <h4>Category 2</h4>
+          <h4>Category 3</h4>
+          <h4>Category 4</h4>
+          <h4>Category 5</h4>
+        </section>
+
+        <section id="review">
+          <h5>Anmeldelser</h5>
+          <article>
+            <img src="https://picsum.photos/id/40/200/200" alt="Anmeldelser" />
+            <p>Mister Whisker</p>
+            <p>
+              Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
+              Suspendisse laoreet ante interdum erat iaculis, sit amet porta
+              tellus scelerisque. Nullam condimentum, orci sit amet suscipit
+              consectetur, dolor nisl finibus nisl, a sagittis sem dui non
+              sapien. Mauris sagittis leo eu urna aliquet, at porta ipsum
+              euismod.
+            </p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/40/200/200" alt="Anmeldelser" />
+            <p>Mister Whisker</p>
+            <p>
+              Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
+              Suspendisse laoreet ante interdum erat iaculis, sit amet porta
+              tellus scelerisque. Nullam condimentum, orci sit amet suscipit
+              consectetur, dolor nisl finibus nisl, a sagittis sem dui non
+              sapien. Mauris sagittis leo eu urna aliquet, at porta ipsum
+              euismod.
+            </p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/40/200/200" alt="Anmeldelser" />
+            <p>Mister Whisker</p>
+            <p>
+              Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
+              Suspendisse laoreet ante interdum erat iaculis, sit amet porta
+              tellus scelerisque. Nullam condimentum, orci sit amet suscipit
+              consectetur, dolor nisl finibus nisl, a sagittis sem dui non
+              sapien. Mauris sagittis leo eu urna aliquet, at porta ipsum
+              euismod.
+            </p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/40/200/200" alt="Anmeldelser" />
+            <p>Mister Whisker</p>
+            <p>
+              Etiam bibendum quam at ipsum luctus, vitae semper nisi vulputate.
+              Suspendisse laoreet ante interdum erat iaculis, sit amet porta
+              tellus scelerisque. Nullam condimentum, orci sit amet suscipit
+              consectetur, dolor nisl finibus nisl, a sagittis sem dui non
+              sapien. Mauris sagittis leo eu urna aliquet, at porta ipsum
+              euismod.
+            </p>
+          </article>
+        </section>
+      </main>
+
+      <footer>
+        <a href="index.html">
+          <img
+            id="footer-logo"
+            src="https://picsum.photos/200"
+            alt="Footer logoen for nettsiden"
+          />
+        </a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+        <h5>KONTAKT</h5>
+        <ul id="contact-info">
+          <li>Adresse: B R A Veien 4, 1757 Halden</li>
+          <li>Telefon: 69 60 80 00</li>
+          <li>E-post: halden@hiof.no</li>
+          <li>Åpningstider: Stenger 15:00</li>
+        </ul>
+        <h5>SNARVEIER</h5>
+        <ul id="footer-nav">
           <li><a href="#">Produkter</a></li>
           <li><a href="#">Kategorier</a></li>
           <li><a href="#">Kontakt oss</a></li>
         </ul>
-        <form>
-          <label for="search" hidden>Søk</label>
-          <input type="search" placeholder="søk her" id="search">
-          <input type="submit" hidden>
-          <button onclick=""><img src="https://img.icons8.com/material-rounded/24/000000/search.png"></button>
-        </form>
-      </nav>
-    </header>
-
-    <footer>
-      <ul id="contact-info">
-        <h5>KONTAKT</h5>
-        <li>Adresse: B R A Veien 4, 1757 Halden</li>
-        <li>Telefon: 69 60 80 00</li>
-        <li>E-post: halden@hiof.no</li>
-        <li>Åpningstider: Stenger 15:00</li>
-      </ul>
-      <ul id="footer-nav">
-        <h5>SNARVEIER</h5>
-        <li><a href="#">Produkter</a></li>
-        <li><a href="#">Kategorier</a></li>
-        <li><a href="#">Kontakt oss</a></li>
-      </ul>
-      <ul>
         <h5>SOSIALE MEDIER</h5>
-        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
-      </ul>
-    </footer>
+        <ul>
+          <li>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+          </li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
