--- a/product.html
+++ b/product.html
@@ -40,11 +40,56 @@
           ></a>
         </nav>
       </header>
+      <h2 id="breadcrumbs">
+        <span><a href="#">Hjem</a></span> >
+        <span><a href="#">Kategori</a></span> >
+        <span><a href="#">Produktnavn</a></span>
+      </h2>
       <main>
         <section>
           <article>
             <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" />
             <!--Image by <a href="https://pixabay.com/users/clangs-825633/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">智铿 梁</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">Pixabay</a>-->
+            <h3>Produktnavn</h3>
+            <p>MERKENAVN</p>
+            <p>5 195 kr inkl. mva.</p>
+            <p>Farge: Blå</p>
+          </article>
+        </section>
+        <section>
+          <h4>Lignende produkter</h4>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
+          </article>
+          <article>
+            <img src="https://picsum.photos/id/21/200/300" />
+            <h4>Product name</h4>
+            <p>Kr 1999</p>
           </article>
         </section>
       </main>
