--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,145 @@
           ></a>
         </nav>
       </header>
-
+      <main>
+        <h1>Kasse</h1>
+        <section>
+          <h2>1. SHOPPINGBAGGEN DIN</h2>
+          <article>
+            <img src="bilder/dressjakke.jpg" />
+            <h3>Product Name</h3>
+            <p>Kr 1999</p>
+            <p>Farge: Blå</p>
+          </article>
+          <article>
+            <img src="bilder/dressjakke.jpg" />
+            <h3>Product Name</h3>
+            <p>Kr 1999</p>
+            <p>Farge: Blå</p>
+          </article>
+          <article>
+            <img src="bilder/dressjakke.jpg" />
+            <h3>Product Name</h3>
+            <p>Kr 1999</p>
+            <p>Farge: Blå</p>
+          </article>
+        </section>
+        <section>
+          <h2>2. DINE OPPLYSNINGER</h2>
+          <form method="post">
+            <label for="firstname">
+              <input
+                type="text"
+                name="firstname"
+                placeholder="Fornavn*"
+                id="firstname"
+                maxlength="20"
+                required
+              />
+            </label>
+            <label for="lastname">
+              <input
+                type="text"
+                name="lastname"
+                placeholder="Etternavn*"
+                id="lastname"
+                maxlength="45"
+                required
+              />
+            </label>
+            <label for="streetaddress">
+              <input
+                type="text"
+                name="streetaddress"
+                placeholder="Gateadresse*"
+                id="streetaddress"
+                maxlength="40"
+                required
+              />
+            </label>
+            <label for="postnumber">
+              <input
+                type="text"
+                name="postnumber"
+                placeholder="Postnummer*"
+                id="postnumber"
+                maxlength="10"
+                required
+              />
+            </label>
+            <label for="postaddress">
+              <input
+                type="text"
+                name="postaddress"
+                placeholder="Poststed*"
+                id="Postaddress"
+                maxlength="40"
+                required
+              />
+            </label>
+          </form>
+          <button id="saveButton" onclick="">Lagre</button>
+          <button id="cancelButton" onclick="">Avbryt</button>
+        </section>
+        <section>
+          <h3>3. LEVERING</h3>
+          <label>
+            <input type="radio" name="choice" />
+            Express Hjemlevering
+          </label>
+          <label>
+            <input type="radio" name="choice" />
+            Ekspress Pakke til utleveringssted
+          </label>
+          <label>
+            <input type="radio" name="choice" />
+            Standard Hjemlevering
+          </label>
+        </section>
+        <section>
+          <h3>4. BETALING</h3>
+          <p>BETAL MED KORT</p>
+          <label for="cardnumber">
+            Kortnummer
+            <input
+              type="number"
+              name="cardnumber"
+              placeholder="4124 **** 4125 ****"
+              id="cardnumber"
+              required
+            />
+          </label>
+          <label for="carddate">
+            Utløpsdato
+            <input type="date" name="carddate" id="carddate" required />
+          </label>
+          <label for="CVCnumber">
+            CVC/CVV
+            <input
+              type="number"
+              name="CVCnumber"
+              placeholder="CVC/CVV"
+              id="CVCnumber"
+              required
+            />
+          </label>
+          <p>Å betale inkl. mva.</p>
+          <p>1 199 kr</p>
+          <button onclick="">Fullfør Kjøp</button>
+          <p>
+            Du bekrefter herved at opplysningene og dokumentene du har oppgitt
+            er korrekte og fullstendige. Leverandøren forbeholder seg retten til
+            å heve eller avslutte avtaleforholdet dersom det foreligger uriktige
+            eller ufullstendie opplysninger
+          </p>
+          <label>
+            <input type="radio" name="choice" />
+            Ja takk! Send nyhetsbrev til meg.
+            <input type="radio" name="choice" />
+            Jeg ønsker å motta tekstmeldinger med tilbud og nyheter.
+          </label>
+        </section>
+      </main>
       <footer>
         <a href="index.html">
           <img id="footer-logo" src="https://picsum.photos/200" />
