--- a/checkout.html
+++ b/checkout.html
@@ -13,20 +13,21 @@
     <div id="grid-container">
       <header id="global-header">
         <a href="index.html">
-          <img id="main-logo" src="https://picsum.photos/200" />
+          <img id="main-logo" src="https://picsum.photos/200" alt="Hovedlogo" />
         </a>
         <nav class="flex-space-between">
           <form id="search-bar">
-            <label for="search" hidden>Søk</label>
-            <input type="search" placeholder="søk her" />
-            <button>
+            <label for="search">
+              <input type="search" placeholder="søk her" id="search" />
+            </label>
+            <button type="submit">
               <span><i class="fa-solid fa-magnifying-glass"></i></span>
             </button>
           </form>
           <ul class="flex-menu">
             <li><a href="index.html">Hjem</a></li>
             <li><a href="product.html">Produkter</a></li>
-            <li><a href="#">Kategorier</a></li>
+            <li><a href="index.html#categories">Kategorier</a></li>
             <li><a href="#contact-info">Kontakt oss</a></li>
           </ul>
           <a href="#"
@@ -45,19 +46,19 @@
         <section>
           <h2>1. SHOPPINGBAGGEN DIN</h2>
           <article>
-            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" alt="Produktet" />
             <h3>Product Name</h3>
             <p>Kr 1999</p>
             <p>Farge: Blå</p>
           </article>
           <article>
-            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" alt="Produktet" />
             <h3>Product Name</h3>
             <p>Kr 1999</p>
             <p>Farge: Blå</p>
           </article>
           <article>
-            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" alt="Produktet" />
             <h3>Product Name</h3>
             <p>Kr 1999</p>
             <p>Farge: Blå</p>
@@ -111,7 +112,7 @@
                 type="text"
                 name="postaddress"
                 placeholder="Poststed*"
-                id="Postaddress"
+                id="postaddress"
                 maxlength="40"
                 required
               />
@@ -171,9 +172,11 @@
             å heve eller avslutte avtaleforholdet dersom det foreligger uriktige
             eller ufullstendie opplysninger
           </p>
-          <label>
+          <label id="newsletter">
             <input type="radio" name="choice" />
             Ja takk! Send nyhetsbrev til meg.
+          </label>
+          <label id="offers-and-news">
             <input type="radio" name="choice" />
             Jeg ønsker å motta tekstmeldinger med tilbud og nyheter.
           </label>
@@ -181,35 +184,59 @@
       </main>
       <footer>
         <a href="index.html">
-          <img id="footer-logo" src="https://picsum.photos/200" />
+          <img
+            id="footer-logo"
+            src="https://picsum.photos/200"
+            alt="Hovedlogo i footer"
+          />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>KONTAKT</h5>
         <ul id="contact-info">
-          <h5>KONTAKT</h5>
-          <li>Adresse: B R A Veien 4, 1757 Halden</li>
-          <li>Telefon: 69 60 80 00</li>
-          <li>E-post: halden@hiof.no</li>
-          <li>Åpningstider: Stenger 15:00</li>
+          <li>
+            <span><i class="fa-solid fa-location-dot"></i></span>
+            Adresse: B R A Veien 4, 1757 Halden
+          </li>
+          <li>
+            <span><i class="fa-solid fa-phone"></i></span>
+            Telefon: 69 60 80 00
+          </li>
+          <li>
+            <span><i class="fa-solid fa-envelope"></i></span>
+            E-post: halden@hiof.no
+          </li>
+          <li>
+            <span><i class="fa-solid fa-clock"></i></span>
+            Åpningstider: Stenger 15:00
+          </li>
         </ul>
+        <h5>SNARVEIER</h5>
         <ul id="footer-nav">
-          <h5>SNARVEIER</h5>
-          <li><a href="#">Produkter</a></li>
-          <li><a href="#">Kategorier</a></li>
-          <li><a href="#">Kontakt oss</a></li>
+          <li><a href="product.html">Produkter</a></li>
+          <li><a href="index.html#categories">Kategorier</a></li>
+          <li><a href="#contant-info">Kontakt oss</a></li>
         </ul>
+        <h5>SOSIALE MEDIER</h5>
         <ul>
-          <h5>SOSIALE MEDIER</h5>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://no.pinterest.com/"
+              ><i class="fa-brands fa-pinterest"></i
+            ></a>
           </li>
         </ul>
       </footer>
