--- a/product.html
+++ b/product.html
@@ -13,21 +13,22 @@
     <div id="grid-container">
       <header id="global-header">
         <a href="index.html">
-          <img id="main-logo" src="https://picsum.photos/200" />
+          <img id="main-logo" src="https://picsum.photos/200" alt="Hovedlogo" />
         </a>
         <nav class="flex-space-between">
           <form id="search-bar">
-            <label for="search" hidden>Søk</label>
-            <input type="search" placeholder="søk her" />
-            <button>
+            <label for="search">
+              <input type="search" placeholder="søk her" id="search" />
+            </label>
+            <button type="submit">
               <span><i class="fa-solid fa-magnifying-glass"></i></span>
             </button>
           </form>
           <ul class="flex-menu">
             <li><a href="index.html">Hjem</a></li>
             <li><a href="product.html">Produkter</a></li>
-            <li><a href="#">Kategorier</a></li>
-            <li><a href="#contact-info">Kontakt oss</a></li>
+            <li><a href="index.html#categories">Kategorier</a></li>
+            <li><a href="product.html#contact-info">Kontakt oss</a></li>
           </ul>
           <a href="#"
             ><span><i class="fa-regular fa-user"></i></span
@@ -41,17 +42,17 @@
         </nav>
       </header>
       <h2 id="breadcrumbs">
-        <span><a href="#">Hjem</a></span> >
-        <span><a href="#">Kategori</a></span> >
+        <span><a href="index.html">Hjem</a></span> >
+        <span><a href="index.html#categories">Kategori</a></span> >
         <span><a href="#">Produktnavn</a></span>
       </h2>
       <main>
         <section>
           <article>
-            <img src="bilder/dressjakke.jpg" />
-            <img src="bilder/dressjakke.jpg" />
-            <img src="bilder/dressjakke.jpg" />
-            <img src="bilder/dressjakke.jpg" />
+            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
+            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
+            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
+            <img src="bilder/dressjakke.jpg" alt="produkt bilde" />
             <!--Image by <a href="https://pixabay.com/users/clangs-825633/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">智铿 梁</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2688317">Pixabay</a>-->
             <h3>Produktnavn</h3>
             <p>MERKENAVN</p>
@@ -62,32 +63,50 @@
         <section>
           <h4>Lignende produkter</h4>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
           <article>
-            <img src="https://picsum.photos/id/21/200/300" />
+            <img
+              src="https://picsum.photos/id/21/200/300"
+              alt="produkt bilde"
+            />
             <h4>Product name</h4>
             <p>Kr 1999</p>
           </article>
@@ -95,35 +114,59 @@
       </main>
       <footer>
         <a href="index.html">
-          <img id="footer-logo" src="https://picsum.photos/200" />
+          <img
+            id="footer-logo"
+            src="https://picsum.photos/200"
+            alt="footer-logo"
+          />
         </a>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h5>KONTAKT</h5>
         <ul id="contact-info">
-          <h5>KONTAKT</h5>
-          <li>Adresse: B R A Veien 4, 1757 Halden</li>
-          <li>Telefon: 69 60 80 00</li>
-          <li>E-post: halden@hiof.no</li>
-          <li>Åpningstider: Stenger 15:00</li>
+          <li>
+            <span><i class="fa-solid fa-location-dot"></i></span>
+            Adresse: B R A Veien 4, 1757 Halden
+          </li>
+          <li>
+            <span><i class="fa-solid fa-phone"></i></span>
+            Telefon: 69 60 80 00
+          </li>
+          <li>
+            <span><i class="fa-solid fa-envelope"></i></span>
+            E-post: halden@hiof.no
+          </li>
+          <li>
+            <span><i class="fa-solid fa-clock"></i></span>
+            Åpningstider: Stenger 15:00
+          </li>
         </ul>
+        <h5>SNARVEIER</h5>
         <ul id="footer-nav">
-          <h5>SNARVEIER</h5>
-          <li><a href="#">Produkter</a></li>
-          <li><a href="#">Kategorier</a></li>
-          <li><a href="#">Kontakt oss</a></li>
+          <li><a href="product.html">Produkter</a></li>
+          <li><a href="index.html#categories">Kategorier</a></li>
+          <li><a href="#contant-info">Kontakt oss</a></li>
         </ul>
+        <h5>SOSIALE MEDIER</h5>
         <ul>
-          <h5>SOSIALE MEDIER</h5>
           <li>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://no.pinterest.com/"
+              ><i class="fa-brands fa-pinterest"></i
+            ></a>
           </li>
         </ul>
       </footer>
